implemented splitting of hands. Next: refactor and incorporate bet sizes